implement basic assets handler