@@ -1,8 +1,11 @@
 import kotlinx.coroutines.delay
 import server.Server
+import java.nio.file.Path
 
+// run with --illegal-access=permit to allow accessing Java built-in Mime types
 fun main() {
   Server(8080).apply {
+    assets("/", Path.of("public"))
     route("/") { "Hello World" }
     route("/delay") {
       delay(1000)
